--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,6 +10,5 @@ routes = [
 # Bind an R2 Bucket. Use R2 to store arbitrarily large blobs of data, such as files.
 # Docs: https://developers.cloudflare.com/r2/api/workers/workers-api-usage/
 [[r2_buckets]]
-r2_buckets  = [
-    { binding = "BUCKET_bucketname", bucket_name = "mealuet-src"}
-]
+binding = 'BUCKET_bucketname'
+bucket_name = 'mealuet-src'
