--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
+    
     - name: 'Deploy to Cloudflare Workers with Wrangler'
       uses: cloudflare/wrangler-action@v3.1.0
       with:
